fix(book):fix createBook types zod correction + clean category
