# src/domain/books/Books.entity.ts
@@ -1,14 +1,16 @@
 import { AuthorBook, PosterBook, TitleBook } from "@shared/types";
 import {
   Column,
+  CreateDateColumn,
+  DeleteDateColumn,
   Entity,
   Index,
   JoinTable,
   ManyToMany,
   OneToMany,
   PrimaryGeneratedColumn,
+  UpdateDateColumn,
 } from "typeorm";
-import { ApiProperty } from "@nestjs/swagger";
 import { CategoriesEntity } from "@domain/categories";
 import { FavoriesEntity } from "@domain/favories";
 import { ProfileEntity } from "@domain/profiles";
@@ -24,19 +26,13 @@ export class Books {
   @Column("varchar", { name: "title", length: 80 })
   title: TitleBook;
 
-  @Column("varchar", { name: "author", length: 250 })
+  @Column("varchar", { name: "author", length: 80 })
   author: AuthorBook;
 
   @Column("varchar", { name: "poster", nullable: true, length: 250 })
   poster: PosterBook | null;
 
   @ManyToMany(() => CategoriesEntity, (categories) => categories.books)
-  @JoinTable({
-    name: "Book_categorie",
-    joinColumns: [{ name: "book_id", referencedColumnName: "id" }],
-    inverseJoinColumns: [{ name: "category_id", referencedColumnName: "id" }],
-    schema: "migration1",
-  })
   categories: CategoriesEntity[];
 
   @OneToMany(() => FavoriesEntity, (favories) => favories.book)
@@ -50,4 +46,13 @@ export class Books {
     schema: "migration1",
   })
   profiles: ProfileEntity[];
+
+  @CreateDateColumn()
+  createAt: Date;
+
+  @UpdateDateColumn()
+  updateAt: Date;
+
+  @DeleteDateColumn()
+  deleteAt: Date;
 }
